--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,61 @@
 asgiref==3.8.1
+attrs==23.2.0
+Automat==22.10.0
 certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
+constantly==23.10.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==43.0.0
+cssselect==1.2.0
 defusedxml==0.8.0rc2
 Django==3.2.16
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+drf-yasg==1.21.7
+filelock==3.15.4
+hyperlink==21.0.0
 idna==3.7
+incremental==22.10.0
+inflection==0.5.1
+itemadapter==0.9.0
+itemloaders==1.3.1
 itypes==1.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
+lxml==5.2.2
 MarkupSafe==2.1.5
 oauthlib==3.2.2
+packaging==24.1
+parsel==1.9.1
+Protego==0.3.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
+PyDispatcher==2.0.7
 PyJWT==2.8.0
+pyOpenSSL==24.2.1
 python-dotenv==0.10.1
 python3-openid==3.2.0
 pytz==2024.1
+PyYAML==6.0.1
+queuelib==1.7.0
 requests==2.32.3
+requests-file==2.1.0
 requests-oauthlib==2.0.0
+Scrapy==2.11.2
+service-identity==24.1.0
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.5.4
 sqlparse==0.5.1
+tldextract==5.1.2
+Twisted==24.3.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
+w3lib==2.2.1
+zope.interface==6.4.post2
