--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ exclude =
     */venv/,
     env/
     */env/,
+    scraper/scraper/
 per-file-ignores =
     */settings.py:E501
     */manage.py:E501
