--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,13 @@ djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-yasg==1.21.7
 filelock==3.15.4
+flake8==6.0.0
+flake8-isort==6.0.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 inflection==0.5.1
+isort==5.13.2
 itemadapter==0.9.0
 itemloaders==1.3.1
 itypes==1.2.0
@@ -28,14 +31,17 @@ Jinja2==3.1.4
 jmespath==1.0.1
 lxml==5.2.2
 MarkupSafe==2.1.5
+mccabe==0.7.0
 oauthlib==3.2.2
 packaging==24.1
 parsel==1.9.1
 Protego==0.3.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycodestyle==2.10.0
 pycparser==2.22
 PyDispatcher==2.0.7
+pyflakes==3.0.1
 PyJWT==2.8.0
 pyOpenSSL==24.2.1
 python-dotenv==0.10.1
