--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,8 @@ exclude =
     */venv/,
     env/
     */env/,
-    scraper/scraper/
+    scraper/scraper/,
+    */scraper/scraper/
 per-file-ignores =
     */settings.py:E501
     */manage.py:E501
